# computer-graphics

./: .clang-format  CMakeLists.txt
res/: resources.json
res/shaders/: fragment.fs  fsprite.fs  vertex.vs  vsprite.vs
src/: main.cpp
src/game/: Game.cpp  Game.hpp  Level.cpp  Level.hpp  Tank.cpp  Tank.hpp
src/game/gameobjects/: Border.cpp  Border.hpp  BrickWall.cpp  BrickWall.hpp  Bullet.cpp  Bullet.hpp  ConcreteWall.cpp  ConcreteWall.hpp  Eagle.cpp  Eagle.hpp  IGameObject.cpp  IGameObject.hpp  Ice.cpp  Ice.hpp  Orientation.hpp  Tank.cpp  Tank.hpp  Trees.cpp  Trees.hpp  Water.cpp  Water.hpp
src/game/gamestates/: GameState.hpp  IGameState.hpp  Level.cpp  Level.hpp  StartScreen.cpp  StartScreen.hpp
src/physics/: PhysicsEngine.cpp  PhysicsEngine.hpp
src/render/: AnimatedSprite.cpp  AnimatedSprite.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Render.cpp  Render.hpp  RenderProgram.cpp  RenderProgram.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  SpriteAnimator.cpp  SpriteAnimator.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/resources/: ResourceManager.cpp  ResourceManager.hpp  stb_image.h
src/utils/: Timer.cpp  Timer.hpp
